grammar.js
		source_file: $ => seq(
			optional($.shebang_line),
			optional(seq(repeat1($.file_annotation), $._semi)),
			optional($.package_header),
			repeat($.import_header),
			repeat(seq($._statement, $._semi))
		),

		type_parameters: $ => seq("<", sep1($.type_parameter, ","), ">"),

		type_parameter: $ => seq(
			optional($.type_parameter_modifiers),
			alias($.simple_identifier, $.type_identifier),
			optional(seq(":", $._type))
		),

		_function_value_parameters: $ => seq("(", optional(sep1($._function_value_parameter, ",")), ")"),

		function_declaration: $ => prec.right(seq( // TODO
			optional($.modifiers),
			"fun",
			optional($.type_parameters),
			$.simple_identifier,
			$._function_value_parameters,
			optional(seq(":", $._type)),
			optional($.type_constraints),
			optional($.function_body)
		)),

		function_body: $ => choice($._block, seq("=", $._expression)),

		parameters_with_optional_type: $ => seq("(", sep1($.parameter_with_optional_type, ","), ")"),

		parameter_with_optional_type: $ => seq(
			optional($.parameter_modifiers),
			$.simple_identifier,
			optional(seq(":", $._type))
		),

		parameter: $ => seq($.simple_identifier, ":", $._type),

		_type: $ => seq(
			optional($.type_modifiers),
			choice(
				$.parenthesized_type,
				$.nullable_type,
				$._type_reference,
				$.function_type
			)
		),

		_type_reference: $ => choice(
			$.user_type,
			"dynamic"
		),

		nullable_type: $ => seq(
			choice($._type_reference, $.parenthesized_type),
			repeat1($._quest)
		),

		_quest: $ => "?",

		// TODO: Figure out a better solution than right associativity
		//       to prevent nested types from being recognized as
		//       unary expresions with navigation suffixes.

		user_type: $ => prec.right(sep1($._simple_user_type, ".")),

		_simple_user_type: $ => prec.right(seq(
			alias($.simple_identifier, $.type_identifier),
			optional($.type_arguments)
		)),

		type_projection: $ => choice(
			seq(optional($.type_projection_modifiers), $._type),
			"*"
		),

		_statement: $ => choice(
			$._declaration,
			seq(
				repeat(choice($.label, $.annotation)),
				choice(
					$.assignment,
					$._loop_statement,
					$._expression
				)
			)
		),

		_block: $ => prec(PREC.BLOCK, seq("{", optional($.statements), "}")),

		_semi: $ => /[\r\n]+/,

		_expression: $ => choice(
			$._unary_expression,
			$._binary_expression,
			$._primary_expression
		),

		// Unary expressions

		additive_expression: $ => prec.left(PREC.ADDITIVE, seq($._expression, $._additive_operator, $._expression)),

		type_arguments: $ => prec.left(PREC.TYPE_ARGS, seq("<", sep1($.type_projection, ","), ">")),

		anonymous_function: $ => seq(
			"fun",
			optional(seq(sep1($._simple_user_type, "."), ".")), // TODO
			"(", ")",
			optional($.function_body)
		),

		_additive_operator: $ => choice("+", "-"),

		simple_identifier: $ => $._lexical_identifier, // TODO

		integer_literal: $ => token(seq(optional(/[1-9]/), DEC_DIGITS)),

		_lexical_identifier: $ => choice(
			/[a-zA-Z_][a-zA-Z_0-9]*/,
			/`[^\r\n`]+`/
		),
